--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
                         <P>Technical Lead, Cognetics Consulting</P>
                         <p>Call: 08151912403</p>
                     </div>
+
+                    <div class="back">
+                        <button class="home"><a href="home.html" target="_blank">Back to Home</a></button>
+                    </div>
                 </div>
         
             </div>
